reverted changes to ZombiesNPC, potentially fixed spawnmob issue